# pkg/swagger/server/restapi/operations/get_collection_type_project_number.go
@@ -1,56 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-)
-
-// GetCollectionTypeProjectNumberHandlerFunc turns a function with the right signature into a get collection type project number handler
-type GetCollectionTypeProjectNumberHandlerFunc func(GetCollectionTypeProjectNumberParams) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn GetCollectionTypeProjectNumberHandlerFunc) Handle(params GetCollectionTypeProjectNumberParams) middleware.Responder {
-	return fn(params)
-}
-
-// GetCollectionTypeProjectNumberHandler interface for that can handle valid get collection type project number params
-type GetCollectionTypeProjectNumberHandler interface {
-	Handle(GetCollectionTypeProjectNumberParams) middleware.Responder
-}
-
-// NewGetCollectionTypeProjectNumber creates a new http.Handler for the get collection type project number operation
-func NewGetCollectionTypeProjectNumber(ctx *middleware.Context, handler GetCollectionTypeProjectNumberHandler) *GetCollectionTypeProjectNumber {
-	return &GetCollectionTypeProjectNumber{Context: ctx, Handler: handler}
-}
-
-/*
-	GetCollectionTypeProjectNumber swagger:route GET /collection/{type}/project/{number} getCollectionTypeProjectNumber
-
-retrieve RDR data collection associated with a project
-*/
-type GetCollectionTypeProjectNumber struct {
-	Context *middleware.Context
-	Handler GetCollectionTypeProjectNumberHandler
-}
-
-func (o *GetCollectionTypeProjectNumber) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewGetCollectionTypeProjectNumberParams()
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
