# pkg/swagger/server/restapi/operations/get_dac_project_number.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetDacProjectNumberHandlerFunc turns a function with the right signature into a get dac project number handler
+type GetDacProjectNumberHandlerFunc func(GetDacProjectNumberParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetDacProjectNumberHandlerFunc) Handle(params GetDacProjectNumberParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetDacProjectNumberHandler interface for that can handle valid get dac project number params
+type GetDacProjectNumberHandler interface {
+	Handle(GetDacProjectNumberParams) middleware.Responder
+}
+
+// NewGetDacProjectNumber creates a new http.Handler for the get dac project number operation
+func NewGetDacProjectNumber(ctx *middleware.Context, handler GetDacProjectNumberHandler) *GetDacProjectNumber {
+	return &GetDacProjectNumber{Context: ctx, Handler: handler}
+}
+
+/*
+	GetDacProjectNumber swagger:route GET /dac/project/{number} getDacProjectNumber
+
+retrieve the Data Acquisition Collection associated with a project
+*/
+type GetDacProjectNumber struct {
+	Context *middleware.Context
+	Handler GetDacProjectNumberHandler
+}
+
+func (o *GetDacProjectNumber) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetDacProjectNumberParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
